Task 5/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front-end
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: back-end-api
  policyTypes:
  - Ingress
  
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-to-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-front-end
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-backend-to-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: admin-front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-back-end-api
  policyTypes:
  - Ingress
